Update Oct 26 25
Fade in and out on screen, Main title screen working.